Simple map added!

--- a/SayanJobeDone/Client/Pages/SubmitInformation.razor
+++ b/SayanJobeDone/Client/Pages/SubmitInformation.razor
@@ -37,11 +37,11 @@
             <ValidationMessage For="@(() => fileInformation.PhoneNumber)" />
         </div>
 
-        <div class="form-group">
+@*        <div class="form-group">
             <label for="Address">Address</label>
-            <InputText id="Address" class="form-control" @bind-Value="fileInformation.Address?.Street" />
-            <ValidationMessage For="@(() => fileInformation.Address?.Street)" />
-        </div>
+            <InputText id="Address" class="form-control" @bind-Value="fileInformation.Address.Street" />
+            <ValidationMessage For="@(() => fileInformation.Address.Street)" />
+        </div>*@
 
         <div class="form-group">
             <label for="City">City</label>
