--- a/SayanJobeDone/Client/_Imports.razor
+++ b/SayanJobeDone/Client/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using SayanJobeDone.Client
 @using SayanJobeDone.Client.Shared
+
+
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Maps
