--- a/SayanJobeDone/Client/Pages/Index.razor
+++ b/SayanJobeDone/Client/Pages/Index.razor
@@ -1,11 +1,15 @@
 ﻿@page "/"
 
 <PageTitle>Index</PageTitle>
-<h1>Welcome to YourApp!</h1>
-
-<p class="lead">Find trusted domestic service providers for all your needs.</p>
-
 <div class="row">
+    <div class="border-2 bg-info p-3 "><h1 class="text-center ">TimeTrove: Empower, Earn, and Assist</h1></div>
+
+    <div class="text-light bg-dark  text-center p-3"><h3 class="">Find trusted domestic service providers for all your needs.</h3></div>
+</div>
+
+
+
+<div class="row bg-secondary p-3">
     <div class="col-md-6">
         <h2>How It Works</h2>
         <ul>
