Errores fixed! Thanks GOD

--- a/SayanJobeDone/Client/Pages/Auth/Signup.razor
+++ b/SayanJobeDone/Client/Pages/Auth/Signup.razor
@@ -1,7 +1,7 @@
 ﻿@page "/signup"
 @*@using YourApp.Models*@
 @using Microsoft.AspNetCore.Components.Forms
-@using SayanJobeDone.Shared.Models;
+@using SayanJobeDone.Shared.Dtos;
 
 <h2>Sign Up</h2>
 
