--- a/SayanJobeDone/Client/Pages/SubmitInformation.razor
+++ b/SayanJobeDone/Client/Pages/SubmitInformation.razor
@@ -1,6 +1,6 @@
 ﻿@page "/fileinformation"
 @using System.ComponentModel.DataAnnotations
-@using SayanJobeDone.Shared.Models;
+@using SayanJobeDone.Shared.Dtos;
 @using Microsoft.AspNetCore.Components.Forms
 
 <h3>File Information</h3>
