Service response added!

--- a/SayanJobeDone/Client/Shared/NavMenu.razor
+++ b/SayanJobeDone/Client/Shared/NavMenu.razor
@@ -25,6 +25,7 @@
 
 @code {
     private bool collapseNavMenu = true;
+    public List<CategoryDto>? categories { get; set; }
 
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
